src/components/Header/Header.css
.App-header {
  background-color: #071927;
  width: 100%;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  color: #D0D7DF;
}

.giphy-embed {
  width: 270px;
  border: 0;
  display: block;
}

.title {
  background-color: #071927;
  font-size: 2rem;
  font-weight: bold;
  text-decoration: none;
  margin: 0 25px;
}

@media only screen and (max-width: 850px) {
  .App-header {
    justify-content: space-between;
  }

  .title {
    margin: 0 50px 0 0 ;
  }

  .giphy-embed {
    width: 210px;
  }
}

@media only screen and (max-width: 580px) {
  .title {
    margin: 10px;
  }

  .giphy-embed {
    width: 150px;
  }
}

